--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Hello world!</h1>
-    <p>Welcome to my GitHub Pages site!</p>
+    <p>testing by writing some gibberish!</p>
   </body>
 </html>
